@@ -1,5 +1,9 @@
+# This file is generated by Dist::Zilla::Plugin::CPANFile v6.030
+# Do not edit this file directly. To change prereqs, edit the `dist.ini` file.
+
 requires "Exporter::Tiny" => "0.042";
 requires "HTTP::Message" => "6.06";
+requires "List::Util" => "1.61";
 requires "Module::Pluggable" => "5.1";
 requires "Moo" => "2.000001";
 requires "Try::Tiny" => "0.22";
